# typing-test

./: .gitignore  Doxyfile  LICENSE  README.md  main.py  pyproject.toml
docs/: manual.md
docs/extra_pages_to_gen/: mainpage.dox  words.dox
etc/: __init__.py  alert_printing.py  colors.py  window_checker.py
main_app/: app.py
prompts/: prompt.py
prompts/subwindow_prompts/: confirmation_prompt.py
prompts/whole_screen_prompts/: start_screen_prompt.py  test_parameters_prompt.py
prompts/whole_screen_prompts/stats/: stats_showing_prompts.py
test_statistics/: data_presentation.py  file_management.py  statistics_calculation.py  stats_presentation.py
text_handlers/: oneline_textfield.py  textbox.py
typing_test/: __init__.py  main.py  summary.py  typing_test_subwindows.py  typing_tester.py  typing_textpad.py  words_handler.py
typing_test/app/: __init__.py  app.py
typing_test/etc/: __init__.py  alert_printing.py  colors.py  window_checker.py  words.csv
typing_test/main_app/: app.py
typing_test/performing_typing_test/: etc.py  summary.py  typing_test_subscreens.py  typing_test_subwindows.py  typing_tester.py  typing_textpad.py
typing_test/prompts/: __init__.py  prompt.py
typing_test/prompts/subscreen_prompts/: confirmation_prompt.py
typing_test/prompts/subwindow_prompts/: confirmation_prompt.py
typing_test/prompts/whole_screen_prompts/stats/: __init__.py  (+1 more)
typing_test/test_statistics/: __init__.py  data_presentation.py  file_management.py  statistics_calculation.py  stats_presentation.py
typing_test/text_handlers/: oneline_textfield.py  textbox.py
(+3 files in other folders)
